# research-workspace

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  MIGRATION_HANDOFF_20260605.md  README.md  additional-features.md  hk-isolation.md  pyproject.toml  refactor-guideline.md
.github/: pull_request_template.md
_shared/: metrics.py
demo/: hk-public-demo-allowlist-v1.txt  hk-public-demo-export-v1.json
demo/hk-public-demo-template-v1/: LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
demo/hk-public-demo-template-v1/.github/workflows/: ci.yml
demo/hk-public-demo-template-v1/archive/: README.md
demo/hk-public-demo-template-v1/docs/: README.md  architecture.md
demo/hk-public-demo-template-v1/fixtures/: synthetic_prices.csv
demo/hk-public-demo-template-v1/scripts/: check_quality.py  run_demo.py
demo/hk-public-demo-template-v1/src/hk_strategy_demo/: __init__.py  allocation.py  data.py  pipeline.py  research.py
demo/hk-public-demo-template-v1/tests/: test_smoke.py  test_units.py
docs/: README.md  a-share-production-readiness.md  architecture-split-closure-checklist.md  artifact-contracts.yml  bootstrap.md  compatibility-facades.yml  concept-level-ml-exploration.md  contracts.md  data-transition-playbook.md  deprecations.md  deprecations.yml  documentation-lifecycle.md  hk-legacy-surface-inventory.md  hk-private-archive-manifest.yml  hk-private-archive.md  hk-public-demo-export.md  hk-public-split-manifest.yml  hk-research-lane-inventory.json  maintainability-governance.md  maintainability-refactor-roadmap.yml  platform-workflow.md  quality-coverage-governance.yml  quality-governance.md  release-checklist.md  release-notes-hk-cold-freeze-20260526.md  release-notes-hk-research-freeze-20260601.md  script-lifecycle.yml  session-handoff-hk-cold-storage-20260601.md  session-handoff-hk-research-cold-storage-20260601.md  strategy-satellites.md  style-factor-market-regimes-2008-2026.md  style-factors.md  value-regime-18y.md  version-matrix.md  workspace-maintenance.md
research-contracts/: pyproject.toml
research-contracts/src/research_contracts/: artifact_contracts.py
scripts/: a_share_readiness.py  a_share_readiness_common.py  a_share_readiness_contract.py  a_share_readiness_evidence.py  concept_etf_ml_backtest.py  dead_code_advisory.py  export_hk_legacy_archive.py  export_hk_public_demo.py  export_holdings_html.py  hk_archive_gate.py  hk_public_demo_scan.py  hk_research_lane_inventory.py  hotsector_to_cstree_universe.py  maintainability_baseline.py  path_b_production.py  path_c_m1_validate.py  print_version_matrix.py  publish_etf_industry_signal.py  run_quality_checks.py  run_submodule_checks.py  scan_workspace_secrets.py  smoke_contracts.py  style_factor_attribution.py  submodule_checks.json  workspace_doctor.py  workspace_env.py  workspace_governance.py  workspace_governance_common.py  workspace_governance_hk_split.py  workspace_governance_quality.py  workspace_governance_submodules.py  workspace_import_boundaries.py
style_factors/: __init__.py  __main__.py  attribution.py  charts.py  data.py  factor_calc.py  report.py
tests/: test_a_share_readiness.py  test_artifact_contract_manifest.py  test_data_transition_playbook.py  test_docs_links.py  test_export_hk_public_demo.py  test_gitmodules.py  test_hk_archive_boundary.py  test_hk_private_archive.py  test_hk_public_split_manifest.py  test_hk_research_lane_inventory.py  test_maintainability_governance.py  (+7 more)
(+125 files in other folders)
