[project]
name = "research-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.23",
  "pandas>=2.2",
  "pyarrow>=14",
  "tabulate>=0.9",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
include = ["src/research_contracts/**/*.py", "src/style_factors/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
extend-exclude = [
  ".git",
  ".pytest_cache",
  ".venv",
  "alpha-research",
  "strategy-pipeline",
  "market-data-platform",
  "portfolio-backtester",
  "quant-execution-engine",
  "demo",
  "scripts/concept_etf_ml_backtest.py",
  "scripts/export_holdings_html.py",
  "scripts/hotsector_to_cstree_universe.py",
  "scripts/path_b_production.py",
  "scripts/path_c_m1_validate.py",
  "scripts/publish_etf_industry_signal.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
include = [
  "scripts/run_quality_checks.py",
  "scripts/run_submodule_checks.py",
  "scripts/scan_workspace_secrets.py",
  "scripts/workspace_governance_common.py",
  "scripts/workspace_governance_submodules.py",
  "scripts/workspace_import_boundaries.py",
  "src/research_contracts/__init__.py",
  "src/research_contracts/artifact_contracts.py",
]
exclude = [
  ".venv",
  "alpha-research",
  "artifacts",
  "build",
  "dist",
  "market-data-platform",
  "portfolio-backtester",
  "quant-execution-engine",
  "strategy-pipeline",
]

[tool.basedpyright]
include = [
  "scripts/run_quality_checks.py",
  "scripts/run_submodule_checks.py",
  "scripts/scan_workspace_secrets.py",
  "scripts/workspace_governance_common.py",
  "scripts/workspace_governance_submodules.py",
  "scripts/workspace_import_boundaries.py",
  "src/research_contracts/__init__.py",
  "src/research_contracts/artifact_contracts.py",
]
exclude = [
  ".venv",
  "alpha-research",
  "artifacts",
  "build",
  "dist",
  "market-data-platform",
  "portfolio-backtester",
  "quant-execution-engine",
  "strategy-pipeline",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportImplicitRelativeImport = false
reportMissingTypeStubs = false
