[project]
name = "hk-cross-sectional-strategy-demo"
version = "0.1.0"
description = "Paused-maintenance synthetic HK cross-sectional strategy demo"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pyright>=1.1",
  "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"

[tool.ruff]
target-version = "py312"
line-length = 100
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "SIM", "RUF"]

[tool.pyright]
include = ["src", "scripts", "tests"]
exclude = ["archive"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
